# ProxyGenerator

./: .gitignore  LICENSE  README.md  cache.html  proxy.py  proxy_list.json  pyproject.toml  pytest.ini  requirements.txt
.github/: CRON_TEST.md
.github/workflows/: proxy-generator.yml
cache/: proxies.html
data/: .gitkeep  proxies.json
src/: generate_index.py
src/proxygenerator/: __init__.py  main.py
src/proxygenerator/core/: __init__.py  proxy_fetcher.py  proxy_manager.py  proxy_validator.py
src/proxygenerator/utils/: file_handler.py
tests/: __init__.py  test_file_handler.py  test_main.py  test_proxy_fetcher.py  test_proxy_manager.py  test_proxy_validator.py
