[tool.poetry]
name = "proxygenerator"
version = "0.1.0"
description = "A simple proxy generator script"
authors = ["Kouni <kouni@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
