[tool.poetry]
name = "proxygenerator"
version = "0.1.0"
description = "A simple proxy generator script"
authors = ["Kouni <kouni@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
proxygenerator = "src.proxygenerator.main:main"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
isort = "^7.0.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
safety = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",  
    "slow: Slow tests that require network access"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
